Fix mobile spacing issue

--- a/css/custom.css
+++ b/css/custom.css
@@ -286,5 +286,10 @@ p.background-info {
     line-height: normal;
     padding-bottom: 1.2em;
     }
+    
+    section, footer, section.section--even {
+        padding: 0;
+            padding-top: 0px;
+    }
 
 }
